ui: logtable row height , header background and scrollbar issue resolved

--- a/packages/ui-kit/src/scss/base.scss
+++ b/packages/ui-kit/src/scss/base.scss
@@ -642,6 +642,10 @@ tr:focus-visible{
   width: 8px;
   height: 8px;
 }
+.visible-scrollbar.thick::-webkit-scrollbar{
+  width: 8px !important;
+  display: block !important;
+}
 .visible-scrollbar ::-webkit-scrollbar-track{
   background: transparent;
 }
